# dankshell

./: .gitmodules  COPYING  Cargo.toml  Makefile  README.md
compositor/: Cargo.toml
compositor/src/: authorization.rs  backend.rs  ctx.rs  desktop.rs  focus.rs  layer_shell.rs  main.rs  moove.rs  private_api.rs  resize.rs  spawner.rs  surface_registry.rs  util.rs
protos/: Cargo.toml  build.rs
protos/src/: gtkclient.rs  lib.rs  outputs.rs  permissions.rs
protos/xml/: dank-shell-private-api.xml  layer-shell-unstable-v1.xml
shell/: Cargo.toml
shell/src/: conf.rs  desktop_entries.rs  evf.rs  launcher.rs  layer_shell.rs  main.rs
shell/src/panel/: clock.rs  launcher_button.rs  mod.rs  quick_launch.rs
shell/src/settings/: displays.rs  mod.rs
