[workspace]
members = ["compositor"]

[patch.crates-io]
nix = { git = "https://github.com/nix-rust/nix" }
loginw = { path = "../loginw" }
weston-rs = { path = "../weston-rs/weston-rs" }
libweston-sys = { path = "../weston-rs/libweston-sys" }
pretty_env_logger = { path = "/home/greg/src/github.com/seanmonstar/pretty-env-logger" }
