[workspace]
members = ["protos", "compositor", "shell"]

[patch.crates-io]
nix = { git = "https://github.com/nix-rust/nix" }
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger" }
loginw = { path = "../loginw" }
pdfork = { path = "../pdfork" }
rusty-sandbox = { path = "../rusty-sandbox" }
ipc-channel = { path = "../../servo/ipc-channel" }
weston-rs = { path = "../weston-rs/weston-rs" }
libweston-sys = { path = "../weston-rs/libweston-sys" }
#wayland-sys = { path = "/home/greg/src/github.com/Smithay/wayland-rs/wayland-sys" }
#wayland-client = { path = "/home/greg/src/github.com/Smithay/wayland-rs/wayland-client" }
#wayland-server = { path = "/home/greg/src/github.com/Smithay/wayland-rs/wayland-server" }
#wayland-commons = { path = "/home/greg/src/github.com/Smithay/wayland-rs/wayland-commons" }
#wayland-protocols = { path = "/home/greg/src/github.com/Smithay/wayland-rs/wayland-protocols" }
