[workspace]
members = ["protos", "compositor", "shell", "loginw"]

[patch.crates-io]
################################################### Local (submodules)
weston-rs = { path = "weston-rs/weston-rs" }
loginw = { path = "loginw" }

################################################### Temporary / own

#rusty-sandbox = { path = "../rusty-sandbox" }
#tiny-nix-ipc = { path = "../tiny-nix-ipc" }

################################################### Temporary / forks or updates

#wayland-sys = { path = "../../Smithay/wayland-rs/wayland-sys" }
#wayland-client = { path = "../../Smithay/wayland-rs/wayland-client" }
#wayland-server = { path = "../../Smithay/wayland-rs/wayland-server" }
#wayland-commons = { path = "../../Smithay/wayland-rs/wayland-commons" }
#wayland-protocols = { path = "../../Smithay/wayland-rs/wayland-protocols" }
#wayland-scanner = { path = "../../Smithay/wayland-rs/wayland-scanner" }
#wayland-scanner = { git = "https://github.com/Smithay/wayland-rs" }

nix = { git = "https://github.com/nix-rust/nix" }
pretty_env_logger = { git = "https://github.com/seanmonstar/pretty-env-logger" }

gio = { git = "https://github.com/myfreeweb/gio", branch = "0.4.1" } # DesktopAppInfo
