cargo-features = ["edition"]

[package]
name = "compositor"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Weston", "Wayland", "Compositor" ]
categories = ["gui"]
description = "The dankshell Wayland compositor"
license = "MIT"
homepage = "https://github.com/myfreeweb/dankshell"
repository = "https://github.com/myfreeweb/dankshell"
edition = "2018"
publish = false
autobins = false

[[bin]]
name = "dankshell-compositor"
path = "src/main.rs"

[dependencies]
protos = { path = "../protos", features = ["server"] }
loginw = "0"
weston-rs = "0"
wayland-sys = { version = "0", features = ["client", "cursor", "egl", "server"] }
wayland-server = "0"
xkbcommon = "0.3"
input-sys = "1"
libc = "0.2"
nix = "0.11"
serde = "1"
serde_derive = "1"
pdfork = "0"
rusty-sandbox = "0"
tiny-nix-ipc = { version = "0", features = ["ser_cbor"] }
parking_lot = { version = "0.6", features = ["nightly"] }
log = "0.4"
pretty_env_logger = "0.2"
