[package]
name = "protos"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Wayland", "Desktop" ]
categories = ["gui"]
description = "The extra Wayland protocols used by dankshell"
license = "MIT"
homepage = "https://github.com/myfreeweb/dankshell"
repository = "https://github.com/myfreeweb/dankshell"
publish = false

[features]
server = ["wayland-sys/server", "wayland-protocols/server", "wayland-server"]
client = ["wayland-sys/client", "wayland-protocols/client", "wayland-client"]
gtkclient = ["client", "libc", "log", "gtk", "gdk", "gdk-sys", "glib", "fragile"]

[dependencies]
wayland-sys = "0"
wayland-commons = "0"
wayland-protocols = "0"
wayland-server = { version = "0", optional = true }
wayland-client = { version = "0", optional = true }
bitflags = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0"
libc = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
gtk = { version = "0.4", features = ["v3_16"], optional = true }
gdk = { version = "0", optional = true }
gdk-sys = { version = "0", optional = true }
glib = { version = "0", optional = true }
fragile = { version = "0", optional = true }

[build-dependencies]
wayland-scanner = "0"
