[package]
name = "shell"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Wayland", "Desktop" ]
categories = ["gui"]
description = "The dankshell shell experience"
license = "MIT"
homepage = "https://github.com/myfreeweb/dankshell"
repository = "https://github.com/myfreeweb/dankshell"
publish = false
autobins = false

[[bin]]
name = "dankshell-shell-experience"
path = "src/main.rs"

[dependencies]
protos = { path = "../protos", features = ["client", "gtkclient"] }
wayland-client = "0"
gtk = { version = "0.4", features = ["v3_16"] }
gdk = "0"
gdk-sys = "0"
glib = "0"
send-cell = "0"
libc = "0.2"
log = "0.4"
pretty_env_logger = "0.2"
